@@ -3,6 +3,12 @@ Changes in 2.0.6-dev from 2.0.5
 
 
 
+Bugfixes
+
+* Incorrect pretty-printing of `(pi x\ p x)`.
+  #104 (Reported by Dan DaCosta)
+
+
 Changes in 2.0.5 from 2.0.4
 ---------------------------
 
